--- a/temos/Mokslas/Mokslas.vienam.html
+++ b/temos/Mokslas/Mokslas.vienam.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokslas vienam</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    
+    <div class="container2">
+        <div class="virsus">
+            <div><a href="file:///C:/Users/amand/Desktop/Stovykla/index.html" class="btn1">Temos</a></div> 
+        </div>
+
+        <div class="pavadinimas1">
+            <h4>Tarpukariu Lietuvoje, pradžios mokyklose buvo mokomasi šių dalykų: tikybos, lietuvių kalbos, rusų kalbos, skaičiavimo, tėvynės pažinimo, istorijos, geografijos, gamtos, dailės, rankų darbų, muzikos, dainavimo ir kūno kultūros. Ko neturi būti šiame sąraše?</h4>
+        </div>
+        <div class="fotke">
+            <img src="../foto/mokykla.jpg" alt="travel-industry-air">
+        </div>
+
+
+        <div class="buttons2">
+            <div class="button2">A: Rankų darbų</div>
+            <div class="button2">B: Dainavimo</div>
+            <div class="button2">C: Rusų kalbos</div>
+            <div class="button2">D: Tėvynės pažinimo</div>
+        </div>
+    </div>
 </body>
 </html>
