--- a/temos/Muzika/Muzika.trim.html
+++ b/temos/Muzika/Muzika.trim.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mokslas trim</title>
+    <title>Muzika trim</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -14,14 +14,14 @@
         </div>
 
         <div class="pavadinimas1">
-            <h4>Fi- atkarpos dalyba į dvi dalis taip, kad didesniosios ir mažesniosios dalių santykis būtų lygus visos atkarpos ir didesniosios dalies santykiui. Kaip dar kitaip yra vadinamas Fi?</h4>
+            <h4>Kokios muzikinės grupės įkūrėjas yra šis žmogus?</h4>
         </div>
         <div class="fotke">
-            <img src="../foto/fi.webp" alt="fi">
+            <img src="../foto/Jarutis.jpg" alt="Jarutis">
         </div>
 
         <details><summary>Atsakymas</summary>
-        <h1>Aukso pjūvis arba dieviškoji proporcija</h1>
+        <h1>Freaks On Floor</h1>
         </details>
 </body>
 </html>
