--- a/temos/Muzika/Muzika.vienam.html
+++ b/temos/Muzika/Muzika.vienam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mokslas trim</title>
+    <title>Muzika vienam</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -14,14 +14,19 @@
         </div>
 
         <div class="pavadinimas1">
-            <h4>Fi- atkarpos dalyba į dvi dalis taip, kad didesniosios ir mažesniosios dalių santykis būtų lygus visos atkarpos ir didesniosios dalies santykiui. Kaip dar kitaip yra vadinamas Fi?</h4>
+            <h4>Iš kokios valstybės yra kilusi grupė Queen?</h4>
         </div>
         <div class="fotke">
-            <img src="../foto/fi.webp" alt="fi">
+            <img src="../foto/queen.jpg" alt="Queen">
         </div>
 
-        <details><summary>Atsakymas</summary>
-        <h1>Aukso pjūvis arba dieviškoji proporcija</h1>
-        </details>
+
+        <div class="buttons2">
+            <div class="button2">A: JAV</div>
+            <div class="button2">B: Prancūzija </div>
+            <div class="button2">C: Airija</div>
+            <div class="button2">D: Didžiosios Britanijos</div>
+        </div>
+    </div>
 </body>
 </html>
