--- a/temos/Transportas/Transp.trim.html
+++ b/temos/Transportas/Transp.trim.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mokslas trim</title>
+    <title>Transportas trim</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -14,14 +14,14 @@
         </div>
 
         <div class="pavadinimas1">
-            <h4>Fi- atkarpos dalyba į dvi dalis taip, kad didesniosios ir mažesniosios dalių santykis būtų lygus visos atkarpos ir didesniosios dalies santykiui. Kaip dar kitaip yra vadinamas Fi?</h4>
+            <h4>1979m. Dakaro ralis buvo pirmosios ralio lenktynės. Jos prasidėjo 1978m. gruodžio 26 dieną Paryžiuje. Ralio finišas buvo Dakare 1979 m. sausio 14 d.. Kieno sostinė yra Dakaras?</h4>
         </div>
         <div class="fotke">
-            <img src="../foto/fi.webp" alt="fi">
+            <img src="../foto/dakaras.jpg" alt="dakar">
         </div>
 
         <details><summary>Atsakymas</summary>
-        <h1>Aukso pjūvis arba dieviškoji proporcija</h1>
+        <h1>Senegalo</h1>
         </details>
 </body>
 </html>
