--- a/temos/Transportas/Trasp.dviem.html
+++ b/temos/Transportas/Trasp.dviem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mokslas vienam</title>
+    <title>Transportas dviem</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -14,18 +14,18 @@
         </div>
 
         <div class="pavadinimas1">
-            <h4>Kokia yra II Niutono dėsnio formulė?</h4>
+            <h4>1937m. šis žmogus paliko (*) komandą ir įkūrė savo įmonę, kuri gamino automobilių dalis, o 1947m. visi šio žmogaus sukurti automobiliai gavo vardą, kuris yra šio žmogaus pavardė. Kokia tai komanda (*) ? </h4>
         </div>
         <div class="fotke">
-            <img src="../foto/mokykla.jpg" alt="travel-industry-air">
+            <img src="../foto/Ferrari.webp" alt="autor">
         </div>
 
 
         <div class="buttons2">
-            <div class="button2">A: F = m*(dv/dt) = ma.</div>
-            <div class="button2">B: F1 = -F2.</div>
-            <div class="button2">C: F = μN</div>
-            <div class="button2">D: F = G*Mm/r^2 </div>
+            <div class="button2">A: Ferrari</div>
+            <div class="button2">B: Ford</div>
+            <div class="button2">C: Mercedes-Benz</div>
+            <div class="button2">D: Alfa Romeo </div>
         </div>
     </div>
 </body>
